# ocaml-calculator

./: README.md  dune-project  interp.opam
lib/: ast.ml  lexer.mll  main.ml  parser.mly
test/: dune  test_interp.ml
